--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="col-md-5 py-5">
                 <a href="" class="main-nav">
-                    <img src="../images/webdesign-3411373_1920.jpg" class="img-fluid" alt="">
+                    <img src="webdesign-3411373_1920.jpg" class="img-fluid" alt="">
                     <br>
                     <h1>
                         <p class="seo text-center">
