--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                             </a>
                             <div class="col-lg-12 py-4 text-center">
                                 <a href="" class="main-nav">
-                                    <img src="../images/029-instagram.png" id="instalogo">
+                                    <img src="029-instagram.png" id="instalogo">
 
-                                    <img src="../images/027-linkedin.png" id="twitterlogo">
+                                    <img src="027-linkedin.png" id="twitterlogo">
                             </div></a>
 
                 </p>
@@ -122,20 +122,20 @@
             <div class="col-sm-1 py-5">
             </div>
             <div class="col-md-2 py-5">
-                <img src="../images/1.png" class="img-fluid" class="plan" alt= "img that has number 1">
+                <img src="1.png" class="img-fluid" class="plan" alt= "img that has number 1">
                 <!-- <br> -->
                 <h1 class="plan text-center py-3">Plan</h1>
-                <img src="../images/plaining.png" class="img-fluid" alt="planning text">
+                <img src="plaining.png" class="img-fluid" alt="planning text">
                 <!--   <br> -->
             </div>
             <div class="col-sm-1 py-5">
             </div>
             <div class="col-md-3 py-5">
                 <!-- <br> -->
-                <img src="../images/2.png" class="img-fluid" class="design" alt="img that has a number 2">
+                <img src="2.png" class="img-fluid" class="design" alt="img that has a number 2">
                 <!--   <br> -->
                 <h1 class="design text-center py-3">Design</h1>
-                <img src="../images/design.png" class="img-fluid" id="design">
+                <img src="design.png" class="img-fluid" id="design">
             </div>
             <div class="col-sm-1 py-5">
             </div>
@@ -143,11 +143,11 @@
                 <!--  <br>
                 <br>
                 <br> -->
-                <img src="../images/3.png" class="img-fluid" class="develop" id="img3" alt="img that has number 3">
+                <img src="3.png" class="img-fluid" class="develop" id="img3" alt="img that has number 3">
                 <!--   <br>
                 <br>  -->
                 <h1 class="develop text-center py-3">Develop</h1>
-                <img src="../images/develop.png" class="img-fluid" id="">
+                <img src="develop.png" class="img-fluid" id="">
             </div>
         </div>
     </div>
@@ -210,7 +210,7 @@
                 </p>
                 <div class="col-lg-12 py-4 text-center">
                     <a href="https://www.linkedin.com/in/bayar-ali-7aa8981a0/" class="main-nav">
-                        <img src="../images/027-linkedin.png" id="twitterlogo">
+                        <img src="027-linkedin.png" id="twitterlogo">
                 </div></a>
 
             </div>
