--- a/html/contact.html
+++ b/html/contact.html
@@ -10,7 +10,7 @@
     <title>contact</title>
 </head>
 
-<body class="background">
+<body class="header-background">
     <div class="container-fluid ">
         <header class="row p-0">
             <div class="col-lg-12 header-background" class="img-fluid">
