--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 </head>
 
 <body class="background">
-    <div class="container-fluid ">
-        <header class="row p-0">
-            <div class="col-lg-12 header-background" class="img-fluid">
-                <div class="nav-bar">
-                    <nav class="navbar navbar-expand-lg bd-navbar-nav bg-transparent py-2">
+       <nav class="navbar navbar-expand-lg bd-navbar-nav btn-danger py-2">
                         <a class="navbar-brand" href=""> </a>
                         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
                             data-target="navbar" aria-controls="#NavBar" aria-expanded="false"
@@ -39,7 +35,35 @@
                                 </li>
                             </ul>
                         </div>
-                    </nav>
+                    </nav> 
+    <div class="container-fluid ">
+        <header class="row p-0">
+            <div class="col-lg-12 header-background" class="img-fluid">
+                <div class="nav-bar">
+                   <!--  <nav class="navbar navbar-expand-lg bd-navbar-nav bg-transparent py-2">
+                        <a class="navbar-brand" href=""> </a>
+                        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
+                            data-target="navbar" aria-controls="#NavBar" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="ercNavBar">
+                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                <li class="nav-item active">
+                                    <a class="nav-link " href="http://127.0.0.1:5500/index.html">Portoflio <span
+                                            class="sr-only">(current)
+                                        </span></a>
+                                <li class="nav-item active">
+                                    <a class="nav-link " href="http://127.0.0.1:5500/html/aboutme.html">About me <span
+                                            class="sr-only">(current)
+                                        </span></a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav> -->
                 </div>
 
                 <!-- end of nav bar -->
