--- a/index.html
+++ b/index.html
@@ -12,84 +12,58 @@
 </head>
 
 <body class="background">
-       <nav class="navbar navbar-expand-lg bd-navbar-nav btn-danger py-2">
-                        <a class="navbar-brand" href=""> </a>
-                        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                            data-target="navbar" aria-controls="#NavBar" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="ercNavBar">
-                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                                <li class="nav-item active">
-                                    <a class="nav-link " href="http://127.0.0.1:5500/index.html">Portoflio <span
-                                            class="sr-only">(current)
-                                        </span></a>
-                                <li class="nav-item active">
-                                    <a class="nav-link " href="http://127.0.0.1:5500/html/aboutme.html">About me <span
-                                            class="sr-only">(current)
-                                        </span></a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav> 
+
     <div class="container-fluid ">
-        <header class="row p-0">
-            <div class="col-lg-12 header-background" class="img-fluid">
-                <div class="nav-bar">
-                   <!--  <nav class="navbar navbar-expand-lg bd-navbar-nav bg-transparent py-2">
-                        <a class="navbar-brand" href=""> </a>
-                        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                            data-target="navbar" aria-controls="#NavBar" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="ercNavBar">
-                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                                <li class="nav-item active">
-                                    <a class="nav-link " href="http://127.0.0.1:5500/index.html">Portoflio <span
-                                            class="sr-only">(current)
-                                        </span></a>
-                                <li class="nav-item active">
-                                    <a class="nav-link " href="http://127.0.0.1:5500/html/aboutme.html">About me <span
-                                            class="sr-only">(current)
-                                        </span></a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav> -->
-                </div>
-
-                <!-- end of nav bar -->
-                <p>
-                    <h2 class="text"> Hello, I am a Web Developer </h2>
-                    <div class="col-lg-12 py-5 text-center">
-                        <a class="btn btn-light bg-transparent" href="">
-                            <h3>View work </h3>
-                        </a>
-                        <div class="col-lg-12 py-5 text-center">
-                            <a class="btn btn-light bg-transparent" href="#projects">
-                                <h3>Future projects</h3>
-                            </a>
-                            <div class="col-lg-12 py-4 text-center">
-                                <a href="" class="main-nav">
-                                    <img src="029-instagram.png" id="instalogo">
-
-                                    <img src="027-linkedin.png" id="twitterlogo">
-                            </div></a>
-
-                </p>
+        <div class="col-lg-12 header-background" class="img-fluid">
+            <div class="nav-bar">
+                <nav class="navbar navbar-expand-lg bd-navbar-nav bg-transparent py-2">
+                    <a class="navbar-brand" href=""> </a>
+                    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="navbar"
+                        aria-controls="#NavBar" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="ercNavBar">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item active">
+                                <a class="nav-link " href="http://127.0.0.1:5500/index.html">Portoflio <span
+                                        class="sr-only">(current)
+                                    </span></a>
+                            <li class="nav-item active">
+                                <a class="nav-link " href="http://127.0.0.1:5500/html/aboutme.html">About me <span
+                                        class="sr-only">(current)
+                                    </span></a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
+
+            <!-- end of nav bar -->
+            <p>
+                <h2 class="text"> Hello, I am a Web Developer </h2>
+                <div class="col-lg-12 py-5 text-center">
+                    <a href="#projects" class="btn btn-light bg-transparent">
+                        <h3>View work </h3>
+                    </a>
+                    <div class="col-lg-12 py-2 text-center"></div>
+                    <div class="col-lg-12 py-4 text-center">
+                        <a href="https://github.com/bayar-ali" class="main-nav">
+                            <img src="GitHub2.png" id="instalogo">
+
+
+                            <a href="https://www.linkedin.com/in/bayar-ali-7aa8981a0/" class="main-nav">
+                                <img src="027-linkedin.png" id="twitterlogo"></a>
+                    </div></a>
+
+            </p>
+        </div>
         </header>
     </div>
 
-   <!--  container -->
+    <!--  container -->
     <div class="container-fluid section1">
         <div class="row">
             <div class="col-sm-1 py-5">
@@ -124,6 +98,9 @@
             </div>
         </div>
     </div>
+
+    <!-- 3 step process -->
+
     <div class="contain-fluid">
         <div class="row">
             <div class="col-lg-12 banner text-center">
@@ -146,7 +123,7 @@
             <div class="col-sm-1 py-5">
             </div>
             <div class="col-md-2 py-5">
-                <img src="1.png" class="img-fluid" class="plan" alt= "img that has number 1">
+                <img src="1.png" class="img-fluid" class="plan" alt="img that has number 1">
                 <!-- <br> -->
                 <h1 class="plan text-center py-3">Plan</h1>
                 <img src="plaining.png" class="img-fluid" alt="planning text">
@@ -175,55 +152,57 @@
             </div>
         </div>
     </div>
-<!--     <div class="contain-fluid section3">
+
+    <!-- 
+    project section  -->
+    <div class="contain-fluid section3">
         <div class="row">
             <div class="col-lg-12">
                 <p class="futureprojects text-center" id="projects">
-                    Future Projects
+                    Projects
                 </p>
             </div>
         </div>
-        <div class="row ">
+        <div class="row">
+            <a href="https://j-favorito.github.io/Project-1/">
+                <div class="col-sm-3 py-5">
+                    <img src="brwery locator.png" class="brewerylocator">
+                </div>
+            </a>
             <a href="" class="main-nav">
                 <div class="col-sm-1 py-5">
-                </div>
+                    <img src="weather app.png" class="brewerylocator">
 
-                <div class="col-lg-6 py-5">
+                </div>
             </a>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <a href="https://bayar-ali.github.io/code-quiz/" class="main-nav">
+                <div class="col-sm-1 py-5">
+                    <img src="quiz.png" class="brewerylocator">
+                </div>
+            </a>
+
+            <div class="col-lg-6 py-5">
+                </a>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
+
         </div>
-        <div class="col-lg-3 py-5">
-            <a href="" class="main-nav">
-                <img src="../images/New Picture (3).bmp" alt="future" id="projectimg"></a>
-            <br>
-            <a href="" class="main-nav">
-        </div>
-    </div> -->
     </div>
     </div>
+
+    <!-- footer -->
+
     <footer class="contain-fluid footer">
         <div class="col-lg-3 text-center">
             <br>
-            <!-- <br> -->
-            <li class="nav-item active">
-                <a class="btn  ">
-                    <button onclick="showDialog()">Feedback</button>
-                    <div id="glass" class="glass">
-                        <div class="dialog">
-                            <h3></h3>
-                            <p>Rate My website</p>
-                            <input type="number" value="0" id="numPets" />
-                            <button id="dialogOK" type="Submit" onclick="OK()">Submit</button>
-                        </div>
-                    </div>
-                </a>
-            </li>
+            <br>
+
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
