--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../homework2/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -25,16 +26,16 @@
                     <div class="collapse navbar-collapse" id="ercNavBar">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                             <li class="nav-item active">
-                                <a class="nav-link " href="http://127.0.0.1:5500/index.html">Portoflio <span
+                                <a class="nav-link navfonts" href="http://127.0.0.1:5500/index.html">Portoflio <span
                                         class="sr-only">(current)
                                     </span></a>
                             <li class="nav-item active">
-                                <a class="nav-link " href="http://127.0.0.1:5500/html/aboutme.html">About me <span
+                                <a class="nav-link navfonts" href="http://127.0.0.1:5500/html/aboutme.html">About me <span
                                         class="sr-only">(current)
                                     </span></a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
+                                <a class="nav-link navfonts" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -97,7 +98,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> 
 
     <!-- 3 step process -->
 
