--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <!--  container -->
-    <div class="container-fluid section1">
+<!--     <div class="container-fluid section1">
         <div class="row">
             <div class="col-sm-1 py-5">
             </div>
@@ -98,7 +98,7 @@
                 </a>
             </div>
         </div>
-    </div> 
+    </div>  -->
 
     <!-- 3 step process -->
 
