--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <img src="brwery locator.png" class="brewerylocator">
                 </div>
             </a>
-            <a href="" class="main-nav">
+            <a href="https://bayar-ali.github.io/weather-app/" class="main-nav">
                 <div class="col-sm-1 py-5">
                     <img src="weather app.png" class="brewerylocator">
 
