--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
                                         class="sr-only">(current)
                                     </span></a>
                             <li class="nav-item active">
-                                <a class="nav-link navfonts" href="http://127.0.0.1:5500/html/aboutme.html">About me <span
-                                        class="sr-only">(current)
+                                <a class="nav-link navfonts" href="http://127.0.0.1:5500/html/aboutme.html">About me
+                                    <span class="sr-only">(current)
                                     </span></a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link navfonts" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link navfonts"
+                                    href="file:///C:/Users/owner/Downloads/Resume.pdf">Resume</a>
                             </li>
                         </ul>
                     </div>
@@ -65,7 +69,7 @@
     </div>
 
     <!--  container -->
-<!--     <div class="container-fluid section1">
+    <!--     <div class="container-fluid section1">
         <div class="row">
             <div class="col-sm-1 py-5">
             </div>
