--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -26,16 +26,16 @@
                         <div class="collapse navbar-collapse" id="ercNavBar">
                             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                                 <li class="nav-item active">
-                                    <a class="nav-link navfonts" href="http://127.0.0.1:5500/index.html">Portoflio <span
+                                    <a class="nav-link navfonts" href="../index.html">Portoflio <span
                                             class="sr-only">(current)
                                         </span></a>
                                 <li class="nav-item active">
-                                    <a class="nav-link navfonts " href="http://127.0.0.1:5500/html/aboutme.html">About me <span
+                                    <a class="nav-link navfonts " href="aboutme.html">About me <span
                                             class="sr-only">(current)
                                         </span></a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link navfonts" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
+                                    <a class="nav-link navfonts" href="contact.html"> Contact</a>
                                 </li>
                             </ul>
                         </div>
