--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body class="background">
-
     <div class="container-fluid ">
         <div class="col-lg-12 header-background" class="img-fluid">
             <div class="nav-bar">
@@ -26,16 +25,16 @@
                     <div class="collapse navbar-collapse" id="ercNavBar">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                             <li class="nav-item active">
-                                <a class="nav-link navfonts" href="http://127.0.0.1:5500/index.html">Portoflio <span
+                                <a class="nav-link navfonts" href="index.html">Portoflio <span
                                         class="sr-only">(current)
                                     </span></a>
                             <li class="nav-item active">
-                                <a class="nav-link navfonts" href="http://127.0.0.1:5500/html/aboutme.html">About me
+                                <a class="nav-link navfonts" href="html/aboutme.html">About me
                                     <span class="sr-only">(current)
                                     </span></a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link navfonts" href="http://127.0.0.1:5500/html/contact.html"> Contact</a>
+                                <a class="nav-link navfonts" href="html/contact.html"> Contact</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link navfonts"
