--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -54,8 +54,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Bayar Ali</h5>
                                     <p class= "aboutme"> Hello guys!! my name is Bayar, I love to create web
-                                        application,
-                                        I enjoy playing soccer and hiking. </p>
+                                        application, I love to be creative and inspirational </p>
                                     <a href="https://www.linkedin.com/in/bayar-ali-7aa8981a0/" class="btn btn-primary">
                                         connect </a>
                                 </div>
@@ -86,24 +85,13 @@
                             If you’ve ever considered learning programming, I highly encourage you to check it out.
                         </div> </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-12 py-5">
-                        </div>
-                    </div>
-                </div>
+         
                 <footer>
                     <div class="row">
                         <div class="col-lg-12 text-center">
 
-                            <!--     <br>
-                            <br>
-                            <br> -->
-                            <!--  <br> -->
                             <p>
                                 @copyright 2020. All right Reserved
-
-                                <br>
-                                <br>
                             </p>
                             <div class="col-lg-12 py-4 text-center">
                                 <a href="https://www.linkedin.com/in/bayar-ali-7aa8981a0/" class="main-nav">
