--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link navfonts"
-                                    href="file:///C:/Users/owner/Downloads/Resume.pdf">Resume</a>
+                                    href="https://docs.google.com/document/d/1r8eI_93ZAeQXQM6KWqKd8_GKD19Sa4GuWTaUG75Gsp0/edit?usp=sharing">Resume</a>
                             </li>
                         </ul>
                     </div>
