--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
             <div class="col-sm-1 py-5">
             </div>
             <div class="col-md-2 py-5">
-                <img src="1.png" class="img-fluid" class="plan" alt="img that has number 1">
                 <!-- <br> -->
                 <h1 class="plan text-center py-3">Plan</h1>
                 <img src="plaining.png" class="img-fluid" alt="planning text">
@@ -137,7 +136,7 @@
             </div>
             <div class="col-md-3 py-5">
                 <!-- <br> -->
-                <img src="2.png" class="img-fluid" class="design" alt="img that has a number 2">
+             
                 <!--   <br> -->
                 <h1 class="design text-center py-3">Design</h1>
                 <img src="design.png" class="img-fluid" id="design">
@@ -148,7 +147,7 @@
                 <!--  <br>
                 <br>
                 <br> -->
-                <img src="3.png" class="img-fluid" class="develop" id="img3" alt="img that has number 3">
+         
                 <!--   <br>
                 <br>  -->
                 <h1 class="develop text-center py-3">Develop</h1>
@@ -157,8 +156,8 @@
         </div>
     </div>
 
-    <!-- 
-    project section  -->
+    <!--  project section  -->
+
     <div class="contain-fluid section3">
         <div class="row">
             <div class="col-lg-12">
@@ -179,9 +178,9 @@
 
                 </div>
             </a>
-            <a href="https://bayar-ali.github.io/code-quiz/" class="main-nav">
+            <a href="https://hot-restaurant-101.herokuapp.com/home.html" class="main-nav">
                 <div class="col-sm-1 py-5">
-                    <img src="quiz.png" class="brewerylocator">
+                    <img src="./images/hot restaurant2.png" class="brewerylocator">
                 </div>
             </a>
 
