--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -48,15 +48,15 @@
                         <div class="col-4">
                             <br>
                             <h2 class="aboutme">ABOUT ME</h2>
-                            <br>
+                            <br>   <img src="../images/linkin picture.png" id="personalpic" class="card-img-top" alt="my avatar picture">
                             <div class="card" style="width: 18rem;">
-                                <img src="../3_avatar-512.png" class="card-img-top" alt="my avatar picture">
+                              
                                 <div class="card-body">
                                     <h5 class="card-title">Bayar Ali</h5>
                                     <p class= "aboutme"> Hello guys!! my name is Bayar, I love to create web
-                                        application, I love to be creative and inspirational </p>
-                                    <a href="https://www.linkedin.com/in/bayar-ali-7aa8981a0/" class="btn btn-primary">
-                                        connect </a>
+                                        application. </p>
+                                     <pre>        <a href="https://www.linkedin.com/in/bayar-ali-7aa8981a0/" class="btn btn-primary btn-lg " tabindex="-1" role="button" aria-disabled="true">Connect</a></pre>  
+
                                 </div>
                             </div>
                         </div>
