--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Faster+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
  
-
+<!-- css style links + bootstrap -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../homework2/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>portfolio</title>
+    <title>My portfolio</title>
 </head>
 
 <body class="background">
