--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 <!-- css style links + bootstrap -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="../homework2/css/style.css">
+   <!--  <link rel="stylesheet" href="../homework2/css/style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>My portfolio</title>
@@ -50,8 +50,10 @@
             </div>
 
             <!-- end of nav bar -->
+            
             <p>
-                <h2 class="text"> Hello, I am a Web Developer </h2>
+                <h1 class="typing1"> Hello I am a Web </h1>
+            <h1 class="typing"></h1>
                 <div class="col-lg-12 py-5 text-center">
                     <a href="#projects" class="btn btn-light bg-transparent">
                         <h3>View work </h3>
@@ -70,45 +72,6 @@
         </div>
         </header>
     </div>
-
-    <!--  container -->
-    <!--     <div class="container-fluid section1">
-        <div class="row">
-            <div class="col-sm-1 py-5">
-            </div>
-            <div class="col-md-5 py-5">
-                <a href="" class="main-nav">
-                    <img src="webdesign-3411373_1920.jpg" class="img-fluid" alt="">
-                    <br>
-                    <h1>
-                        <p class="seo text-center">
-                            Responsive Web
-                        </p>
-                    </h1>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                </a>
-            </div>
-            <div class="col-md-5 py-5 text-center">
-                <a href="" class="main-nav">
-                    <img src="laptop-1512838_1280.png" class="img-fluid" id="rightimg">
-                    <br>
-                    <h1>
-                        <p class="seo text-center">
-                            Interactive Web
-                        </p>
-                    </h1>
-                </a>
-            </div>
-        </div>
-    </div>  -->
-
-    <!-- 3 step process -->
-
     <div class="contain-fluid">
         <div class="row">
             <div class="col-lg-12 banner text-center">
@@ -252,6 +215,7 @@
 
     <!--  these are bootstrap links  -->
 
+  
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -261,6 +225,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+        <script src="js/script.js"></script>
+        
 </body>
 
 </html>
