--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- end of nav bar -->
             
             <p>
-                <h1 class="typing1"> Hello I am a Web </h1>
+                <h1 class="typing1"> Hello, I am a Web </h1>
             <h1 class="typing"></h1>
                 <div class="col-lg-12 py-5 text-center">
                     <a href="#projects" class="btn btn-light bg-transparent">
