--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <p class="futureprojects text-center" id="projects">
-                    Projects
+                   My Projects
                 </p>
             </div>
         </div>
