--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link navfonts"
-                                    href="https://drive.google.com/file/d/1r-khnpwQUrMOdh62tSillxqkMwcK8I3j/view?ths=true">Resume</a>
+                                    href="file:///C:/Users/owner/Downloads/Ali-resume1.pdf">Resume</a>
                             </li>
                         </ul>
                     </div>
@@ -145,7 +145,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <p class="futureprojects text-center" id="projects">
-                   My Projects
+                    Projects
                 </p>
             </div>
         </div>
