--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-sm-1">
+            </div>
             <a href="https://j-favorito.github.io/Project-1/">
                 <div class="col-sm-3 py-5">
                     <img src="brwery locator.png" class="brewerylocator">
@@ -163,31 +165,37 @@
                     <img src="weather app.png" class="brewerylocator">
 
                 </div>
+                
             </a>
             <a href="https://hot-restaurant-101.herokuapp.com/home.html" class="main-nav">
                 <div class="col-sm-1 py-5">
                     <img src="./images/hot restaurant2.png" class="brewerylocator">
                 </div>
             </a>
-            <a href="" class="main-nav">
+            <a href="https://github.com/bayar-ali/burger-app">
                 <div class="col-sm-1 py-5">
                     <img src="images/burger app img.jpg" class="brewerylocator">
                     <a href="" class="main-nav">
                 </div>
             </a>
-
-
-            <div class="col-lg-6 py-5">
-
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+            <div class="col-lg-6">
             </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-1">
 
+            </div>
+            <div class="col-sm-2">
+                <p class="projectName">
+                  <!--   <pre>           BEER LOCATOR </pre> -->
+                </p>
+              
+               <!--  <a href="https://hot-restaurant-101.herokuapp.com/home.html" class="main-nav">
+                    <div class="col-sm-1 py-5">
+                        <img src="./images/hot restaurant2.png" class="brewerylocator">
+                    </div>
+                </a> -->
+            </div>
         </div>
     </div>
 
@@ -203,7 +211,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <p>
-                    @copyright 2020. All right Reserved
+                    @copyright 2020. All rights Reserved
                     <br>
                     <br>
                 </p>
