adding new project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link navfonts"
-                                    href="https://drive.google.com/file/d/1r-khnpwQUrMOdh62tSillxqkMwcK8I3j/view?ths=true">Resume</a>
+                                    href="https://drive.google.com/file/d/1r-khnpwQUrMOdh62tSillxqkMwcK8I3j/view?usp=sharing">Resume</a>
                             </li>
                         </ul>
                     </div>
@@ -186,15 +186,11 @@
 
             </div>
             <div class="col-sm-2">
-                <p class="projectName">
-                  <!--   <pre>           BEER LOCATOR </pre> -->
-                </p>
-              
-               <!--  <a href="https://hot-restaurant-101.herokuapp.com/home.html" class="main-nav">
+                <a href="https://my-cost-tracker.herokuapp.com/login" class="main-nav">
                     <div class="col-sm-1 py-5">
-                        <img src="./images/hot restaurant2.png" class="brewerylocator">
+                        <img src="images/signinimg.png" class="brewerylocator">
                     </div>
-                </a> -->
+                </a>
             </div>
         </div>
     </div>
