--- a/index.html
+++ b/index.html
@@ -148,20 +148,22 @@
         <div class="col-sm-2">
         </div>
         <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
-                <img src="brwery locator.png" class="card-img-top" alt="...">
+            <div class="card" style="width: 16rem;">
+                <img src="weather app.png" class="projectimg" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Beer Locator</h5>
+                    <h5 class="card-title">Weather App</h5>
                     <br>
-                    <a href="https://j-favorito.github.io/Project-1/" class="btn btn-primary">Website</a>
-                    <a class="btn btn-primary" href="https://github.com/bayar-ali/project-1-" role="button">Code</a>
+                    <br>
+                    <a href="https://bayar-ali.github.io/Weather-Dashboard/" class="btn btn-primary">Website</a>
+                    <a class="btn btn-primary" href="https://github.com/bayar-ali/Weather-Dashboard" role="button">Code</a>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card" style="width: 18rem;">
-                <img src="images/FS_Tracking-Coronavirus.jpg" class="card-img-top" alt="...">
+                <img src="images/FS_Tracking-Coronavirus.jpg" class="projectimg" alt="...">
                 <div class="card-body">
+                    <br>
                     <h5 class="card-title">Covid-19 Tracker</h5>
                     <br>
                     <a href="https://bayar-ali.github.io/Covid-19-Tracker/" class="btn btn-primary">Website</a>
@@ -171,8 +173,8 @@
             </div>
         </div>
         <div class="col-md-3">
-            <div class="card" style="width: rem;">
-                <img src="images/191204_Blog_Feature_Cost-Management-Basics.jpg" class="card-img-top" alt="...">
+            <div class="card" style="width: 20rem;">
+                <img src="images/191204_Blog_Feature_Cost-Management-Basics.jpg" class="projectimg" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">My Cost Tracker</h5>
                     <br>
@@ -189,8 +191,8 @@
         <div class="col-sm-2">
         </div>
         <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
-                <img src="images/burger app img.jpg" class="card-img-top" alt="...">
+            <div class="card" style="width: 16rem;">
+                <img src="images/burger app img.jpg" class="projectimg" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Burger App</h5>
                     <br>
@@ -203,7 +205,7 @@
         </div>
         <div class="col-md-3">
             <div class="card" style="width: 18rem;">
-                <img src="./images/hot restaurant2.png" class="card-img-top" alt="...">
+                <img src="./images/hot restaurant2.png" class="projectimg" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Hot Restaurant</h5>
                    <br>
