update about me page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         </header>
     </div>
-    <div class="contain-fluid stepdesign">
+    <!-- <div class="contain-fluid stepdesign">
         <div class="row">
             <div class="col-lg-12 banner text-center">
                 <br>
@@ -88,7 +88,7 @@
                 </h1>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--   Plan design develop -->
 
     <div class="contain-fluid section2">
