--- a/index.html
+++ b/index.html
@@ -215,18 +215,21 @@
                 </div>
             </div>
         </div>
-        <!--  <div class="col-md-3">
+          <div class="col-md-3">
             <div class="card" style="width: rem;">
-                <img src="images/191204_Blog_Feature_Cost-Management-Basics.jpg" class="card-img-top" alt="...">
+                <img src="images/pool-serivce-app.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title"> Pool Service App</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="https://desert-pools-service-project3.herokuapp.com/" class="btn btn-primary">Website</a>
+                    <a class="btn btn-primary" href="https://github.com/bayar-ali/desert-pool-service" role="button">Code</a>
+                    
+                    
                 </div>
             </div>
             <div class="col-sm-1">
             </div>
-        </div> -->
+        </div> 
     </div>
 
     <!-- footer -->
